src/objects/appsolutely__Creditsafe_Person_Position__c.object
<CustomObject>
    <description>A Creditsafe Person PositionV2</description>
    <fields>
        <fullName>appsolutely__Creditsafe_Person_Director__c</fullName>
        <description>Person director position</description>
        <label>Creditsafe Person Director</label>
        <referenceTo>appsolutely__Creditsafe_Person_Director__c</referenceTo>
        <relationshipLabel>Creditsafe Person Positions</relationshipLabel>
        <relationshipName>Creditsafe_Person_Positions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>appsolutely__Date_Appointed__c</fullName>
        <description>Date Appointed for the position</description>
        <label>Date Appointed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>appsolutely__Position_Name__c</fullName>
        <description>Name of the position</description>
        <label>Position Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Creditsafe Person Position</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Creditsafe Person Position</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Creditsafe Person Positions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>